Fix dark mode

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -38,7 +38,7 @@
   --domino-size: 100px;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
